fix login bugs